fix(sign): readable personal sign message

--- a/src/ui/views/Approval/components/signTypedData.less
+++ b/src/ui/views/Approval/components/signTypedData.less
@@ -115,6 +115,9 @@
       word-wrap: break-word;
       color: #9EA2A9;
       overflow-y: auto;
+
+      white-space:pre-wrap;
+      word-wrap:break-word;
     }
   }
 }
